# ai

./: .gitignore  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
app/: main.py
app/api/: client.py  models.py
app/components/: gauge.py  tables.py
app/tabs/: blacklist.py  demo.py  ip_analysis.py
assets/: initial_prompt.md  intro_slide.html
data/: abuse.json
scripts/: capture_live.py  capture_screenshots.py  debug_tabs.py  live_preview.py  make_gif.py  make_video.py  record_local.py  record_part1.py  record_part2.py  record_video.py
